force-app/main/default/objects/Store__c/Store__c.object-meta.xml
<CustomObject>
    <description>Master data for all stores - 全店舗のマスターデータ</description>
    <label>店舗マスター</label>
    <nameField>
        <label>店舗名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>店舗マスター</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>