force-app/main/default/objects/Store__c/fields/Assigned_SV__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当スーパーバイザー</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>担当店舗</relationshipLabel>
    <relationshipName>Assigned_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>