force-app/main/default/objects/Store__c/fields/Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date__c</fullName>
    <label>開店日</label>
    <type>Date</type>
</CustomField>