force-app/main/default/objects/Store__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業中</fullName>
                <default>true</default>
                <label>営業中</label>
            </value>
            <value>
                <fullName>閉店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>