force-app/main/default/objects/Store__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <externalId>true</externalId>
    <label>店舗コード</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>